[package]
name = "unipager"
version = "2.0.0-alpha"
authors = ["Thomas Gatzweiler <mail@thomasgatzweiler.com>"]
edition = "2018"

[dependencies]
bytes = "^0.5"
serial = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
lazy_static = "^1.0"
lapin = { version = "^1.0.0-beta3" }
failure = "^0.1"
hyper = { version = "^0.13.1" }
futures = "^0.3"
futures-core = "^0.3"
futures-util = "^0.3"
futures-timer = "^3.0.1"
tokio = "^0.2.11"
tokio-amqp = "^0.1.0-beta3"

[dependencies.reqwest]
version = "^0.10.4"
features = ["json"]

[dependencies.async-std]
version = "^1.4"
features = ["unstable", "attributes"]

[dependencies.tungstenite]
version = "^0.10"
default-features = false

[dependencies.tokio-tungstenite]
version = "^0.10.0"
default-features = false

[dependencies.raspi]
path = "lib/raspi"

[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dependencies.log]
version = "^0.4"
features = ["std"]
