[package]
name = "unipager"
version = "2.0.0-alpha"
authors = ["Thomas Gatzweiler <mail@thomasgatzweiler.com>"]
edition = "2018"

[features]
default = []
ptt_hid = ["hidapi"]

[dependencies]
bytes = "^1.1"
serial = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
lazy_static = "^1.0"
failure = "^0.1"
futures = "^0.3"
futures-core = "^0.3"
futures-util = "^0.3"
futures-timer = "^3.0.1"

[dependencies.tokio]
version = "^1.15.0"
default-features = false
features = ["rt", "rt-multi-thread"]

[dependencies.hyper]
version = "^0.14.6"
default-features = false
features = ["server"]

[dependencies.tokio-amqp]
version = "^1.0.0"
default-features = false

[dependencies.lapin]
version = "^1.0.0-rc1"
default-features = false

[dependencies.reqwest]
version = "^0.11.8"
default-features = false
features = ["json"]

[dependencies.async-std]
version = "^1.4"
features = ["unstable", "attributes"]

[dependencies.tungstenite]
version = "^0.16"
default-features = false

[dependencies.tokio-tungstenite]
version = "^0.16.0"
default-features = false

[dependencies.tcp-stream]
version = "^0.23.0"
default-features = false

[dependencies.raspi]
path = "lib/raspi"

[dependencies.hidapi]
version = "1.2.1"
default-features = false
features = ["linux-shared-hidraw"]
optional = true

[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dependencies.log]
version = "^0.4"
features = ["std"]
